// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProgressBar colors should show colors when enabled based on percentage 1`] = `
<div
  className="uw-progress-bar--container"
>
  <div
    className="uw-progress-bar"
  >
    <div
      className="uw-progress-bar--progress"
      style={
        Object {
          "backgroundColor": "#89E79E",
          "width": "30%",
        }
      }
    />
  </div>
  <div
    className="uw-progress-bar--counter"
  >
    3
    /
    10
  </div>
</div>
`;

exports[`ProgressBar numeric value should show it by default 1`] = `
<div
  className="uw-progress-bar--container"
>
  <div
    className="uw-progress-bar"
  >
    <div
      className="uw-progress-bar--progress"
      style={
        Object {
          "width": "30%",
        }
      }
    />
  </div>
  <div
    className="uw-progress-bar--counter"
  >
    3
    /
    10
  </div>
</div>
`;

exports[`ProgressBar should render progress bar as value percentage of max 1`] = `
<div
  className="uw-progress-bar--container"
>
  <div
    className="uw-progress-bar"
  >
    <div
      className="uw-progress-bar--progress"
      style={
        Object {
          "width": "80%",
        }
      }
    />
  </div>
  <div
    className="uw-progress-bar--counter"
  >
    200
    /
    250
  </div>
</div>
`;
